l'ajout des profiles de chaque utilisateur

--- a/Home/home.html
+++ b/Home/home.html
@@ -75,7 +75,7 @@
         <h3>Marketing</h3>
         <div class="profile">
             <div class="profile-photo">
-                <img src="/assets/picprofile.png" alt="">
+                <img src="/assets/pic7.webp" alt="">
             </div>
         <a href="/ViewProfile/Malak.html" >El Guzouli Malak</a>
         </div>
@@ -106,9 +106,9 @@
         <h3>Data Science</h3>
         <div class="profile">
           <div class="profile-photo">
-              <img src="/assets/picprofile.png" alt="">
+              <img src="/assets/pic12.png" alt="">
           </div>
-        <a href="" >Wali Alami Mohammed</a>
+        <a href="/ViewProfile/Wali.html" >Wali Alami Mohammed</a>
         </div>
         <h5>Skill wanted : Mental Health Awareness</h5>
         <div class="tooltip-container">
@@ -136,7 +136,7 @@
         <h3>AI & Machine Learning</h3>
         <div class="profile">
           <div class="profile-photo">
-              <img src="/assets/picprofile.png" alt="">
+              <img src="/assets/pic5.jpeg" alt="">
           </div>
         <a href="/ViewProfile/Nacer.html" >El Hallaoui Nacer</a>
         </div>
@@ -160,16 +160,44 @@
         </div>
       </div>
 
+      <div class="skill-card" data-category="AI-Machine-Learning">
+        <img src="/assets/img2.jpeg" alt=" Image">
+        <h3>AI & Machine Learning</h3>
+        <div class="profile">
+          <div class="profile-photo">
+              <img src="/assets/pic4.jpeg" alt="">
+          </div>
+        <a href="/ViewProfile/othman.html" >Mekouar Othman</a>
+        </div>
+        <h5>Skill wanted : Photography Basics and Editing</h5>
+        <div class="tooltip-container">
+          <span class="tooltip2">36 Followers</span>
+          <span class="text">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 95 114"
+              class="svgIcon"
+            >
+              <rect fill="black" rx="28.5" height="57" width="57" x="19"></rect>
+              <path
+                fill="black"
+                d="M0 109.5C0 83.2665 21.2665 62 47.5 62V62C73.7335 62 95 83.2665 95 109.5V114H0V109.5Z"
+              ></path>
+            </svg>
+            <p>Follow</p></span>
+        </div>
+      </div>
       <div class="skill-card" data-category="Graphic-Design">
         <img src="/assets/images.jpeg" alt=" Image">
         <h3>Graphic Design</h3>
         <div class="profile">
           <div class="profile-photo">
-              <img src="/assets/picprofile.png" alt="">
+              <img src="/assets/pic6.PNG" alt="">
           </div>
         <a href="/ViewProfile/Zineb.html" >Mernissi Zineb</a>
         </div>
-        <h5>Skill wanted : Nutrition</h5>
+        <h5>Skill wanted : Video Editing</h5>
         <div class="tooltip-container">
           <span class="tooltip2">46 Followers</span>
           <span class="text">
@@ -194,9 +222,9 @@
           <h3>Marketing</h3>
           <div class="profile">
               <div class="profile-photo">
-                  <img src="/assets/picprofile.png" alt="">
+                  <img src="/assets/pic5.jpeg" alt="">
               </div>
-          <a href="" >Faris Mohammed</a>
+          <a href="/ViewProfile/Mohamed.html" >Faris Mohammed</a>
           </div>
           <h5>Skill wanted : Web Design </h5>
           <div class="tooltip-container">
@@ -224,11 +252,11 @@
           <h3>Web-Development</h3>
           <div class="profile">
             <div class="profile-photo">
-                <img src="/assets/picprofile.png" alt="">
+                <img src="/assets/pic12.png" alt="">
             </div>
-          <a href="" >Rais Hamza</a>
+          <a href="/ViewProfile/hamzarais.html" >Rais Hamza</a>
           </div>
-          <h5>Skill wanted : Video Editor</h5>
+          <h5>Skill wanted : Translation Skills</h5>
           <div class="tooltip-container">
             <span class="tooltip2">46 Followers</span>
             <span class="text">
@@ -253,7 +281,7 @@
           <h3>Data Science</h3>
           <div class="profile">
             <div class="profile-photo">
-                <img src="/assets/picprofile.png" alt="">
+                <img src="/assets/pic1.png" alt="">
             </div>
           <a href="/ViewProfile/profile.html" >Ouahabi Amine</a>
           </div>
@@ -283,9 +311,9 @@
           <h3>AI & Machine Learning</h3>
           <div class="profile">
             <div class="profile-photo">
-                <img src="/assets/picprofile.png" alt="">
+                <img src="/assets/pic2.png" alt="">
             </div>
-          <a href="" >Khatouf Mohammed-Amine</a>
+          <a href="/ViewProfile/khatouf.html" >Khatouf Mohammed-Amine</a>
           </div>
           <h5>Skill wanted : Public Speaking</h5>
           <div class="tooltip-container">
@@ -312,9 +340,9 @@
           <h3>Graphic Design</h3>
           <div class="profile">
             <div class="profile-photo">
-                <img src="/assets/picprofile.png" alt="">
+                <img src="/assets/pic3.png" alt="">
             </div>
-          <a href="" >Zaime Ali</a>
+          <a href="/ViewProfile/zaimeali.html" >Zaime Ali</a>
           </div>
           <h5>Skill wanted : Astrology</h5>
           <div class="tooltip-container">
@@ -342,9 +370,9 @@
       <h3>Photography</h3>
       <div class="profile">
           <div class="profile-photo">
-              <img src="/assets/picprofile.png" alt="">
+              <img src="/assets/pic5.jpeg" alt="">
           </div>
-      <a href="" >Merioumi Ayoub</a>
+      <a href="/ViewProfile/ayoup.html" >Merioumi Ayoub</a>
       </div>
       <h5>Skill wanted : Play Guitar </h5>
       <div class="tooltip-container">
@@ -372,9 +400,9 @@
       <h3>Web-Development</h3>
       <div class="profile">
         <div class="profile-photo">
-            <img src="/assets/picprofile.png" alt="">
+            <img src="/assets/pic8.jpg" alt="">
         </div>
-      <a href="" >Chark Ghita</a>
+      <a href="/ViewProfile/ghitachark.html" >Chark Ghita</a>
       </div>
       <h5>Skill wanted : Fashion Design</h5>
       <div class="tooltip-container">
@@ -401,9 +429,9 @@
       <h3>Data Science</h3>
       <div class="profile">
         <div class="profile-photo">
-            <img src="/assets/picprofile.png" alt="">
+            <img src="/assets/pic9.webp" alt="">
         </div>
-      <a href="" >Saidi Khadija</a>
+      <a href="/ViewProfile/khadija.html" >Saidi Khadija</a>
       </div>
       <h5>Skill wanted : Entrepreneurship</h5>
       <div class="tooltip-container">
@@ -430,9 +458,9 @@
       <h3>Marketing</h3>
       <div class="profile">
           <div class="profile-photo">
-              <img src="/assets/picprofile.png" alt="">
+              <img src="/assets/pic12.png" alt="">
           </div>
-      <a href="" >Benlemlih Abderrahmane</a>
+      <a href="/ViewProfile/abdoublm.html" >Benlemlih Abderrahmane</a>
       </div>
       <h5>Skill wanted : Web Designer </h5>
       <div class="tooltip-container">
@@ -460,11 +488,11 @@
       <h3>AI & Machine Learning</h3>
       <div class="profile">
         <div class="profile-photo">
-            <img src="/assets/picprofile.png" alt="">
+            <img src="/assets/pic6.PNG" alt="">
         </div>
-      <a href="" >Faiz Chaimae</a>
+      <a href="/ViewProfile/chai.html" >Faiz Chaimae</a>
       </div>
-      <h5>Skill wanted : Astrology</h5>
+      <h5>Skill wanted : Mastering Board Games</h5>
       <div class="tooltip-container">
         <span class="tooltip2">36 Followers</span>
         <span class="text">
@@ -489,7 +517,7 @@
       <h3>Photography</h3>
       <div class="profile">
         <div class="profile-photo">
-            <img src="/assets/picprofile.png" alt="">
+            <img src="/assets/pic5.jpeg" alt="">
         </div>
       <a href="/ViewProfile/profile1.html" >Jebar Abdellah</a>
       </div>
