--- a/ViewProfile/Wali.html
+++ b/ViewProfile/Wali.html
@@ -10,9 +10,9 @@
     <div class="content">
         <div class="profile">
             <div class="details">
-                <img src="/assets/pic1.png" alt="Profile">
+                <img src="/assets/pic12.png" alt="Profile">
                 <div>
-                    <h2>Ouhabi Amine </h2>
+                    <h2>Wali Alami Mohammed</h2>
                     <p>Data Engineer</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
+                    <img src="/assets/téléchargement3.png" alt=""> walisimo@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
