--- a/ViewProfile/Zineb.html
+++ b/ViewProfile/Zineb.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doha Bennani - Profile</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="profile">
             <div class="details">
                 <img src="/assets/pic6.PNG" alt="Profile">
-                    <h2>Zineb Mernissi</h2>
+                    <h2>Mernissi Zineb</h2>
                     <p>Graphic Designer</p>
                 
             </div>
