--- a/ViewProfile/ayoup.html
+++ b/ViewProfile/ayoup.html
@@ -10,10 +10,10 @@
     <div class="content">
         <div class="profile">
             <div class="details">
-                <img src="/assets/pic1.png" alt="Profile">
+                <img src="/assets/pic5.jpeg" alt="Profile">
                 <div>
-                    <h2>Ouhabi Amine </h2>
-                    <p>Data Engineer</p>
+                    <h2>Merioumi Ayoub</h2>
+                    <p>Photographer</p>
                 </div>
             </div>
             <div class="follow">
@@ -23,19 +23,19 @@
 
         <div class="stats">
             <div class="stat">
-                <h3>35</h3>
+                <h3>15</h3>
                 <p>Skills Offered</p>
             </div>
             <div class="stat">
-                <h3>17</h3>
+                <h3>10</h3>
                 <p>Skills Wanted</p>
             </div>
             <div class="stat">
-                <h3>22</h3>
+                <h3>20</h3>
                 <p>Swaps Completed</p>
             </div>
             <div class="stat">
-                <h3>3.9/5</h3>
+                <h3>3.3/5</h3>
                 <p>Rating</p>
             </div>
         </div>
@@ -44,16 +44,20 @@
             <div class="card">
                 <h3>Badges</h3>
                 <div class="badge">
-                    <img src="/assets/badge6.jpeg" alt="Badge">
-                    Skill Master
+                    <img src="/assets/badge3.jpg" alt="Badge">
+                    Community Builder
+                </div>
+                <div class="badge">
+                    <img src="/assets/badge13png.png" alt="Badge">
+                    Skill Experimenter
                 </div>
                 <div class="badge">
                     <img src="/assets/badge14.jpg" alt="Badge">
                     First Skill Swap
                 </div>
                 <div class="badge">
-                    <img src="/assets/badge9.jpeg" alt="Badge">
-                    Polyglot Pro
+                    <img src="/assets/badge4.jpg" alt="Badge">
+                    Top Collaborator
                 </div>
               </div>
             
@@ -62,27 +66,24 @@
                       <div class="metric-title">
                         <h4>Education</h4>
                       </div>
-                      <p>Bachelor's Degree in Software Engineering</p>
-                      <p class="metric-description">Computer Science University  — 2020</p>
+                      <p>Bachelor's Degree in Visual Arts</p>
+                      <p class="metric-description">Art University  — 2019</p>
                     </div>
                     <div class="metric">
                       <div class="metric-title">Work Experience</div>
-                      <p>Data Engineer</p>
-                      <p class="metric-description">Collaborated with data scientists and analysts to understand data needs and ensure proper data availability and quality.</p>
+                      <p>Photojournalist</p>
+                      <p class="metric-description">Documented live events and human interest stories for print and digital publications.</p>
                     </div>
                     <div class="metric">
                         <div class="metric-title">Skills</div>
-                        <p><li>Data Scientist                        </li>
-                            <li>Data Analyst</li>
-                            <li>Statistician</li>
-                            <li>Game Developer</li>
-                            <li>Translator</li>
-                        </p>
-
+                        <p><li>Wildlife Photographer</li>
+                            <li>Product Photographer</li>
+                            <li>Fashion Photographer</li>
+                            <li>Music Producer</li></p>
                       </div>
                     <div class="metric">
                       <div class="metric-title">Languages</div>
-                      <p>Arabic_Native ,  English_Advanced, French_Intermediate, Spanish_Intermediate</p>
+                      <p>Arabic_Native , French_Advanced</p>
                     </div>
                   
             </div>
@@ -92,7 +93,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
+                    <img src="/assets/téléchargement3.png" alt="">ayoubmerioumi@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
