--- a/ViewProfile/khatouf.html
+++ b/ViewProfile/khatouf.html
@@ -10,10 +10,10 @@
     <div class="content">
         <div class="profile">
             <div class="details">
-                <img src="/assets/pic1.png" alt="Profile">
+                <img src="/assets/pic2.png" alt="Profile">
                 <div>
-                    <h2>Ouhabi Amine </h2>
-                    <p>Data Engineer</p>
+                    <h2>Khatouf Mohammed-Amine</h2>
+                    <p>Data Engineer for AI</p>
                 </div>
             </div>
             <div class="follow">
@@ -62,13 +62,13 @@
                       <div class="metric-title">
                         <h4>Education</h4>
                       </div>
-                      <p>Bachelor's Degree in Software Engineering</p>
-                      <p class="metric-description">Computer Science University  — 2020</p>
+                      <p>Bachelor's Degree in Computer Science and AI</p>
+                      <p class="metric-description">Science Science University  — 2021</p>
                     </div>
                     <div class="metric">
                       <div class="metric-title">Work Experience</div>
-                      <p>Data Engineer</p>
-                      <p class="metric-description">Collaborated with data scientists and analysts to understand data needs and ensure proper data availability and quality.</p>
+                      <p>Industry Work</p>
+                      <p class="metric-description">Deploying ML systems in finance, healthcare, or e-commerce.</p>
                     </div>
                     <div class="metric">
                         <div class="metric-title">Skills</div>
@@ -92,7 +92,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
+                    <img src="/assets/téléchargement3.png" alt=""> khatoufamine@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
