--- a/ViewProfile/othman.html
+++ b/ViewProfile/othman.html
@@ -10,10 +10,10 @@
     <div class="content">
         <div class="profile">
             <div class="details">
-                <img src="/assets/pic1.png" alt="Profile">
+                <img src="/assets/pic5.jpeg" alt="Profile">
                 <div>
-                    <h2>Ouhabi Amine </h2>
-                    <p>Data Engineer</p>
+                    <h2>Mekouar Othman</h2>
+                    <p>AI Research Scientist</p>
                 </div>
             </div>
             <div class="follow">
@@ -42,11 +42,6 @@
 
         <div class="cards">
             <div class="card">
-                <h3>Badges</h3>
-                <div class="badge">
-                    <img src="/assets/badge6.jpeg" alt="Badge">
-                    Skill Master
-                </div>
                 <div class="badge">
                     <img src="/assets/badge14.jpg" alt="Badge">
                     First Skill Swap
@@ -55,6 +50,18 @@
                     <img src="/assets/badge9.jpeg" alt="Badge">
                     Polyglot Pro
                 </div>
+                <div class="badge">
+                    <img src="/assets/badge13png.png" alt="Badge">
+                    Year of Skills
+                </div>
+                <div class="badge">
+                    <img src="/assets/badge4.jpg" alt="Badge">
+                    Skill Hoarder
+                </div>
+                <div class="badge">
+                    <img src="/assets/badge6.jpeg" alt="Badge">
+                    Skill Master
+                </div>
               </div>
             
             <div class="card1">
@@ -62,13 +69,13 @@
                       <div class="metric-title">
                         <h4>Education</h4>
                       </div>
-                      <p>Bachelor's Degree in Software Engineering</p>
-                      <p class="metric-description">Computer Science University  — 2020</p>
+                      <p>Bachelor's Degree in Computer Science</p>
+                      <p class="metric-description">Computer Science University  — 2021</p>
                     </div>
                     <div class="metric">
                       <div class="metric-title">Work Experience</div>
-                      <p>Data Engineer</p>
-                      <p class="metric-description">Collaborated with data scientists and analysts to understand data needs and ensure proper data availability and quality.</p>
+                      <p>Research Projects</p>
+                      <p class="metric-description">Working with AI teams.</p>
                     </div>
                     <div class="metric">
                         <div class="metric-title">Skills</div>
@@ -92,7 +99,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
+                    <img src="/assets/téléchargement3.png" alt=""> othmanmekouar@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
