--- a/ViewProfile/hamzarais.html
+++ b/ViewProfile/hamzarais.html
@@ -10,10 +10,10 @@
     <div class="content">
         <div class="profile">
             <div class="details">
-                <img src="/assets/pic1.png" alt="Profile">
+                <img src="/assets/pic12.png" alt="Profile">
                 <div>
-                    <h2>Ouhabi Amine </h2>
-                    <p>Data Engineer</p>
+                    <h2>Rais Hamza</h2>
+                    <p>Full-Stack Developer</p>
                 </div>
             </div>
             <div class="follow">
@@ -62,13 +62,14 @@
                       <div class="metric-title">
                         <h4>Education</h4>
                       </div>
-                      <p>Bachelor's Degree in Software Engineering</p>
+                      <p>Bachelor's Degree in Computer Science</p>
                       <p class="metric-description">Computer Science University  — 2020</p>
                     </div>
                     <div class="metric">
                       <div class="metric-title">Work Experience</div>
                       <p>Data Engineer</p>
-                      <p class="metric-description">Collaborated with data scientists and analysts to understand data needs and ensure proper data availability and quality.</p>
+                      <p class="metric-description"> Handles both front-end and back-end development tasks and creates complete web solutions.
+                    </p>
                     </div>
                     <div class="metric">
                         <div class="metric-title">Skills</div>
@@ -92,7 +93,7 @@
                 <div class="link">
 
                     <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
+                    <img src="/assets/téléchargement3.png" alt="">raishamza@gmail.com
                     </a>
 
                     <a href="https://www.linkedin.com">
