modification interface net2

--- a/skill_details/programming.html
+++ b/skill_details/programming.html
@@ -16,9 +16,9 @@
             <div class="icones1">
                 <ul>
                     <li><a href="/Home/home.html"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="/interface_net2/my_skills.html"><i class="fas fa-briefcase"></i> Skills</a></li>
-                    <li><a href="/interface_net2/find_skills.html" class="active"><i class="fas fa-search"></i> Find Skills</a></li>
-                    <li><a href="/interface_contact/"><i class="fas fa-envelope"></i> Contact</a></li>
+                    <li><a href="../interface_net2/my_skills.html"><i class="fas fa-briefcase"></i> Skills</a></li>
+                    <li><a href="../interface_net2/find_skills.html" class="active"><i class="fas fa-search"></i> Find Skills</a></li>
+                    <li><a href="../interface_net2/contact2.html"><i class="fas fa-envelope"></i> Contact</a></li>
         
                 </ul>
             </div> 
