--- a/skill_details/photography.html
+++ b/skill_details/photography.html
@@ -71,7 +71,7 @@
 
                 </div>
                 <div class="user-actions">
-                    <button class="details-btn">View Profile</button>
+                    <a href=""><button class="details-btn">View Profile</button>
                 </div>
             </div>
 
