ajout de pic profiles dans photography

--- a/ViewProfile/ayoup.html
+++ b/ViewProfile/ayoup.html
@@ -10,7 +10,7 @@
     <div class="content">
         <div class="profile">
             <div class="details">
-                <img src="/assets/pic5.jpeg" alt="Profile">
+                <img src="/assets/pic12.png" alt="Profile">
                 <div>
                     <h2>Merioumi Ayoub</h2>
                     <p>Photographer</p>
