--- a/skill_details/photography.html
+++ b/skill_details/photography.html
@@ -65,7 +65,7 @@
             <h3>Users Offering This Skill</h3>
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/picprofile.png" alt="User Photo">
+                    <img src="/assets/pic12.png" alt="User Photo">
                     <h4>MERIOUMI Ayoub</h4>
                     <p>Professional photographer specializing in portrait and landscape photography.</p>
 
@@ -77,7 +77,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/picprofile.png" alt="User Photo">
+                    <img src="/assets/pic5.jpeg" alt="User Photo">
                     <h4>JEBAR Abdellah</h4>
                     <p>Photography teacher offering tips and tricks for beginners and advanced learners.</p>
 
@@ -90,7 +90,7 @@
 
             <div class="user-card">
                 <div class="user-info">
-                    <img src="/assets/picprofile.png" alt="User Photo">
+                    <img src="/assets/pic1.png" alt="User Photo">
                     <h4>HADDAD Nacim</h4>
                     <p>Wedding photographer with over 10 years of experience capturing magical moments.</p>
                 </div>
