--- a/Home/home.html
+++ b/Home/home.html
@@ -110,7 +110,7 @@
           </div>
         <a href="/ViewProfile/Wali.html" >Wali Alami Mohammed</a>
         </div>
-        <h5>Skill wanted : Mental Health Awareness</h5>
+        <h5>Skill wanted : Playing Piano </h5>
         <div class="tooltip-container">
           <span class="tooltip2">19 Followers</span>
           <span class="text">
