--- a/interface_net2/find_skills.html
+++ b/interface_net2/find_skills.html
@@ -40,8 +40,8 @@
                     <ul>
                         <h4>Doha Bennani</h4>
                         <li><a href="/User profile/user.html">My account</a></li>
-                        <li><a href="">Settings</li></a>
-                        <li><a href="">Help</li></a>
+                        <li><a href="../interface_net/settings.html">Settings</li></a>
+                        <li><a href="../interface_net/FAQ.html">Help</li></a>
                         <li><a href="/interface_logging/connexion.html">Logout</li></a>
                     </ul>
                 </div>
