--- a/Add_editprofile/edit.html
+++ b/Add_editprofile/edit.html
@@ -29,8 +29,8 @@
 <div class="menu" id="menu">
   <ul>
       <li><a href="/User profile/user.html">My account</a></li>
-      <li><a href="">Settings</li></a>
-      <li><a href="">Help</li></a>
+      <li><a href="../interface_net/settings.html">Settings</li></a>
+      <li><a href="../interface_net/FAQ.html">Help</li></a>
       <li><a href="/interface_logging/connexion.html">Logout</li></a>
   </ul>
 </div>
