Modif page Settings

--- a/interface_net/settings.html
+++ b/interface_net/settings.html
@@ -24,7 +24,7 @@
             </div> 
             <div class="separator">
                 <li></li>
-            </div>5
+            </div>
             <div class="icones2">
                 <label class="ui-switch">
                 <input type="checkbox" id="dark-mode-toggle" aria-label="Toggle Dark Mode">
@@ -38,7 +38,7 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <main>
+    <main class="Form">
         <div class="Profile">
             <h2>Profile</h2>
             <div class="separator2">
@@ -78,11 +78,12 @@
         </div>
         <div class="Help">
             <h2>If you need help</h2>
+            <div class="edit">            
+                <a href="../interface_net2/contact2.html">Contact us</a>
+                <a href="../interface_net/FAQ.html">FAQ</a>
+            </div>
         </div>
-        <div class="edit">            
-            <a href="../interface_net2/contact2.html">Contact us</a>
-            <a href="../interface_net/FAQ.html">FAQ</a>
-        </div>
+
 
     </main>
     </body>
