--- a/Home/contactmlk.html
+++ b/Home/contactmlk.html
@@ -14,7 +14,8 @@
                 <img src="/assets/pic7.webp" alt="El Guzouli Malak">
             </div>
             <div class="chat-header-info">
-                <h2>El Guzouli Malak</h2>
+                <!-- Added the profile link -->
+                <h2><a href="/ViewProfile/Malak.html" class="profile-link">El Guzouli Malak</a></h2>
                 <p>Online</p>
             </div>
         </div>
@@ -22,10 +23,9 @@
         <!-- Chat Messages -->
         <div class="chat-messages">
             <div class="message received">
-                <p>Hey , how are you!</p>
+                <p>Hey, how are you!</p>
                 <span class="time">10:45 AM</span>
             </div>
-            
         </div>
 
         <!-- Message Input Area -->
