--- a/Home/home.html
+++ b/Home/home.html
@@ -77,7 +77,7 @@
             <div class="profile-photo">
                 <img src="/assets/pic7.webp" alt="">
             </div>
-        <a href="/ViewProfile/Malak.html" >El Guzouli Malak</a>
+            <a href="/ViewProfile/Malak.html" >El Guzouli Malak</a>
         </div>
         <h5>Skill wanted : Game Development </h5>
         <div class="tooltip-container">
@@ -99,7 +99,7 @@
           >
         </div>
         <div class="button-container">
-          <a href="/Home/contactmlk.html" target="_blank">
+          <a href="/Home/contactmlk.html" >
             <button class="contact-button">Contact</button>
           </a>
           
