--- a/Home/home.html
+++ b/Home/home.html
@@ -137,8 +137,7 @@
           </span>
         </div>
         <div class="button-container">
-          
-            
+          <a href="/Home/contactwali.html" >
             <button class="contact-button">Contact</button>
           </a>
         </div>
