--- a/Home/home.html
+++ b/Home/home.html
@@ -175,7 +175,9 @@
         </div>
         <div class="button-container">
          
-          <button class="contact-button">Contact</button>
+          <a href="/Home/contactnacer.html" >
+            <button class="contact-button">Contact</button>
+          </a>
         </div>
       </div>
 
