--- a/Home/home.html
+++ b/Home/home.html
@@ -210,7 +210,9 @@
         </div>
         <div class="button-container">
          
-          <button class="contact-button">Contact</button>
+          <a href="/Home/contactothman.html" >
+            <button class="contact-button">Contact</button>
+          </a>
         </div>
       </div>
       <div class="skill-card" data-category="Graphic-Design">
