--- a/interface_net/contact.html
+++ b/interface_net/contact.html
@@ -27,33 +27,33 @@
         </div>
     </div>
     <header>
-        <h1>SkillSwap - Contactez-nous</h1>
-        <p>Une question ou un besoin spécifique ? Nous sommes là pour vous aider !</p>
+        <h1>SkillSwap - Contact us </h1>
+        <p>A question or a specific need ? We are here to help you !</p>
     </header>
 
     <main>
         <section class="contact-info">
-            <h2>Informations de contact</h2>
+            <h2>Contact Informations</h2>
             <ul>
                 <li><strong>Email :</strong> support@skillswap.com</li>
-                <li><strong>Téléphone :</strong> +212 6 99 99 99 99</li>
-                <li><strong>Adresse :</strong> Fès, Maroc</li>
+                <li><strong>Phone :</strong> +212 6 99 99 99 99</li>
+                <li><strong>Adress :</strong> Fès, Maroc</li>
             </ul>
         </section>
 
         <section class="contact-form">
-            <h2>Envoyez-nous un message</h2>
+            <h2>Send us a message</h2>
             <form action="submit_form.php" method="post">
                 <label for="name">Nom :</label>
-                <input type="text" id="name" name="name" placeholder="Votre nom" required>
+                <input type="text" id="name" name="name" placeholder="Your name" required>
 
                 <label for="email">Email :</label>
-                <input type="email" id="email" name="email" placeholder="Votre email" required>
+                <input type="email" id="email" name="email" placeholder="Your email" required>
 
                 <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="6" placeholder="Votre message ici..." required></textarea>
+                <textarea id="message" name="message" rows="6" placeholder="Your message here..." required></textarea>
 
-                <button type="submit">Envoyer</button>
+                <button type="submit">Send</button>
             </form>
         </section>
     </main>
