ajout et modification de mediascreen dans qlqs pages

--- a/skill_details/photography.html
+++ b/skill_details/photography.html
@@ -71,7 +71,7 @@
 
                 </div>
                 <div class="user-actions">
-                    <a href=""><button class="details-btn">View Profile</button>
+                    <a href="/ViewProfile/ayoup.html"><button class="details-btn">View Profile</button></a>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
 
                 </div>
                 <div class="user-actions">
-                    <button class="details-btn">View Profile</button>
+                    <a href="/ViewProfile/Nacer.html"><button class="details-btn">View Profile</button></a>
                 </div>
             </div>
 
