--- a/skill_details/photography.html
+++ b/skill_details/photography.html
@@ -84,7 +84,7 @@
 
                 </div>
                 <div class="user-actions">
-                    <a href="/ViewProfile/Nacer.html"><button class="details-btn">View Profile</button></a>
+                    <a href="/ViewProfile/abd.html"><button class="details-btn">View Profile</button></a>
                 </div>
             </div>
 
