--- a/ViewProfile/profile.html
+++ b/ViewProfile/profile.html
@@ -12,7 +12,7 @@
             <div class="details">
                 <img src="/assets/pic1.png" alt="Profile">
                 <div>
-                    <h2>Ouhabi Amine </h2>
+                    <h2>alami Mohammed </h2>
                     <p>Data Engineer</p>
                 </div>
             </div>
@@ -90,22 +90,22 @@
             <div class="card2">
                 <h3>Social and Professional Links</h3>
                 <div class="link">
-
-                    <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement3.png" alt=""> ouahabiamine@gmail.com
-                    </a>
-
-                    <a href="https://www.linkedin.com">
-                    <img src="/assets/téléchargement.jpeg" alt=""> Linkedin
-                    </a>
-
-                    <a href="https://www.twitter.com">
-                    <img src="/assets/téléchargement2.png" alt=""> Twitter
-                    </a>
-
-                    <a href="https://www.instagram.com">
-                    <img src="/assets/téléchargement (1).jpeg" alt=""> Instagram
-                    </a>
+                    <div style="display: flex;flex-direction: row;">
+                        <img src="/assets/téléchargement3.png" alt="">
+                        <a style="margin-top: 0.5rem;"  href="https://www.linkedin.com">alamimed@gmail.com</a>
+                    </div>
+                    <div style="display: flex;flex-direction: row;">
+                        <img src="/assets/téléchargement.jpeg" alt="Linkedin"> 
+                        <a style="margin-top: 0.5rem;" href="https://www.linkedin.com">Linkedin</a>
+                    </div>
+                    <div style="display: flex;flex-direction: row;">
+                        <img src="/assets/téléchargement2.png" alt="">
+                         <a style="margin-top: 0.5rem;" href="https://www.twitter.com">Twitter</a>
+                    </div>  
+                    <div style="display: flex;flex-direction: row;">
+                        <img src="/assets/téléchargement (1).jpeg" alt="">
+                        <a style="margin-top: 0.5rem;" href="https://www.instagram.com">Instagram</a> 
+                    </div>  
                     
                 </div>
               </div>
